force-app/main/default/objects/sixsense__X6sense_Contact_Score__c/sixsense__X6sense_Contact_Score__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold the 6sense Contact Score data.</description>
    <label>6sense Contact Score</label>
    <nameField>
        <label>Product Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>6sense Contact Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>