force-app/main/default/objects/sixsense__X6sense_Contact_Score__c/fields/sixsense__CompanyBuyingStage__c.field-meta.xml
<CustomField>
    <fullName>sixsense__CompanyBuyingStage__c</fullName>
    <description>The buying stage of the parent account/company</description>
    <inlineHelpText>The buying stage of the parent account/company</inlineHelpText>
    <label>Company Buying Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>