force-app/main/default/objects/sixsense__X6sense_Contact_Score__c/fields/sixsense__CompanyProfileFit__c.field-meta.xml
<CustomField>
    <fullName>sixsense__CompanyProfileFit__c</fullName>
    <description>The profile fit of the parent account/company</description>
    <label>Company Profile Fit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>