force-app/main/default/objects/sixsense__X6sense_Contact_Score__c/fields/sixsense__ContactProductKey__c.field-meta.xml
<CustomField>
    <fullName>sixsense__ContactProductKey__c</fullName>
    <externalId>true</externalId>
    <label>ContactProductKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>