force-app/main/default/objects/sixsense__X6sense_Contact_Score__c/fields/sixsense__Profile_Fit__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Profile_Fit__c</fullName>
    <label>Profile Fit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>