force-app/main/default/objects/sixsense__X6sense_Contact_Score__c/listViews/sixsense__All.listView-meta.xml
<ListView>
    <fullName>sixsense__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>